--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,7 +16,7 @@ label { font-size: 14px; color: #4d4d4d; cursor: pointer; display: block; font-w
 /* --------------------------------------- GRID Layout ----------------------------------------- */
 * { box-sizing: border-box; -ms-box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; }
 body { margin: 0 auto }
-.grid { margin: 0 auto; max-width: 1200px; width: 100%; }
+.grid { margin: 0 auto; width: 100%; }
 /* You can choose the grid 1200 or 1140 or 1024 or 960 as per your requirement */
 .g1140 { margin: 0 auto; max-width: 1140px; width: 100%; }
 .g1024 { margin: 0 auto; max-width: 1024px; width: 100%; }
@@ -24,7 +24,7 @@ body { margin: 0 auto }
 .row { width: 100%; margin: 0 auto; }
 .c1 { width: 8.33% }
 .c2 { width: 16.66% }
-.c3 { width: 25% }
+.c3 { width: 25%;}
 .c4 { width: 33.33% }
 .c5 { width: 41.66% }
 .c6 { width: 50% }
@@ -39,7 +39,11 @@ body { margin: 0 auto }
 .c1-8 { width: 12.5% }
 /* This column can be used as a one eigth of the row */
 .c1, .c2, .c3, .c4, .c5, .c6, .c7, .c8, .c9, .c10, .c11, .c12, .c1-5, .c1-8 { min-height: 1px; float: left; padding-left: 10px; padding-right: 10px; position: relative; }
+
+.c3{ padding-left: 75px}
+
 .row .row { margin-left: -10px }
+
 sub, sup { font-size: 60%; line-height: 0; position: relative; vertical-align: baseline; }
 sup { top: -0.5em }
 sub { bottom: -0.25em }
@@ -270,7 +274,7 @@ a.prev span, a.next span { display: none }
 .small { font-size: 12px }
 /* FOOTER ================================================== */
 #wrapfooter { background-color: #222; margin-top: 40px; }
-#footer .title { font-size: 15px; color: #fff; border-bottom: solid #333 1px; padding-bottom: 3px; width: 90%; }
+#footer .title { font-size: 15px; color: #fff; padding-bottom: 3px; width: 90%; }
 .footerstress { border: solid #0E8FAB; border-width: 1px 0 0; clear: both; margin: -9px 0px 17px; height: 0; width: 50%; }
 #footer [class^="icon-"], #footer [class*=" icon-"] { margin-right: 7px }
 #footer { padding: 15px 0px 15px; color: #777; }
@@ -563,7 +567,7 @@ ul.teambox { padding-left: 25px }
 .introtitle { margin: 0; padding: 25px 0 0; font-family: OpenSansRegular,sans-serif; font-size: 47px; color: #FFF; text-align: center; text-shadow: 2px 2px 10px #333; }
 .boxedshadow { background:  no-repeat 50% 0; margin-top: -40px; min-height: 75px; opacity: 1.0; }
 .homeicon { font-size: 25px; width: 55px !Important; margin-left: -10px; }
-.logo { margin-top: 4px }
+.logo { margin-top: 4px; width: 390px; height:80px; }
 .wrapbox { background: #fff; padding-bottom: 30px; -webkit-box-shadow: 0px 0px 10px rgba(0,0,0,0.1); -moz-box-shadow: 0px 0px 10px rgba(0,0,0,0.1); box-shadow: 0px 0px 10px rgba(0,0,0,0.1); margin-top: -35px; }
 .hrtitle { border: solid #eee; border-width: 1px 0 0; clear: both; margin: 1px 0px 19px; height: 0; }
 .stresstitle { border-bottom: #0E8FAB 1px solid; display: inline; padding-bottom: 10px; }
@@ -598,3 +602,89 @@ ul.teambox { padding-left: 25px }
 .noborder { border: 0px }
 .clear {clear:both;}
 .error input,input.error,.error textarea,textarea.error{background-color: #ffffff;  border: 1px solid #eb9468 !Important;  -webkit-transition: border linear 0.2s, box-shadow linear 0.2s; -moz-transition: border linear 0.2s, box-shadow linear 0.2s;-o-transition: border linear 0.2s, box-shadow linear 0.2s; transition: border linear 0.2s, box-shadow linear 0.2s;}.error label,label.error{color:#c60f13;}.error small,small.error{display:block;padding:6px 4px;margin-top:-13px;margin-bottom:12px;background:#c60f13;color:#fff;font-size:12px;font-weight:bold;-moz-border-radius-bottomleft:2px;-webkit-border-bottom-left-radius:2px;border-bottom-left-radius:2px;-moz-border-radius-bottomright:2px;-webkit-border-bottom-right-radius:2px;border-bottom-right-radius:2px;}.error textarea:focus,textarea.error:focus{background:#fafafa;border-color: #b3b3b3;}
+
+
+.gallery-container{
+
+
+	width:90%;
+	height:100%;
+	margin:auto;
+	padding-top:35px;
+
+}
+
+.gallery-div{
+
+	display: inline-block;
+	width:33%;
+	padding-left:10px;
+	padding-right:10px;
+	margin-top: 25px;
+
+}
+
+.gallery-video{
+
+	display: block;
+	object-fit: scale-down;
+	max-width:100%;
+	height: auto;
+	cursor: pointer;
+	transition: all .5s linear;
+	/*opacity:0;
+	animation-name: fadeIn;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+  animation-delay:0s;
+    animation-duration: 2s;
+    animation-fill-mode:both;
+		*/
+}
+
+.video-overlay{
+
+	display:block;
+	position:absolute;
+	top:0;
+	left:0;
+	height: 100%;
+	width:100%;
+	opacity:0;
+}
+
+.video-wrapper{
+
+	position: relative;s
+}
+.video-container{
+
+	background-size: contain;
+	background-position: center center;
+	object-fit: scale-down;
+	background-repeat: no-repeat;
+	height:auto;
+	opacity:0;
+	animation-name: fadeIn;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+  animation-delay:0s;
+    animation-duration: .5s;
+    animation-fill-mode:both;
+
+}
+
+#logo-footer{
+
+	padding-top:75px;
+	padding-left:25px;
+}
+
+@keyframes fadeIn {
+		0% {
+				opacity: 0;
+		}
+		100% {
+				opacity: 1;
+		}
+}
