--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="http://fonts.googleapis.com/css?family=Helvetica+Neue" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Cabin" rel="stylesheet" type="text/css">-->
-    <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='home.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/home.css')}}">
 </head>
 
 
@@ -32,7 +32,7 @@
 
       <a href="{{url_for('form',unique_id=row.4)}}">
 
-        <video poster="{{url_for('static',filename='posters/'+row.1+'.png')}}" class="home-video" muted>
+        <video {#poster="{{url_for('static',filename='posters/'+row.1+'.png')}}"#} class="home-video" autoplay muted>
 
           <source src="{{ url_for('static', filename='videos/'+row.3+'.mp4') }}"  type="video/mp4">
 
